<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.PersonalDataActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/tb_personal_data_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/personal_data_title" />

    <FrameLayout
        android:id="@+id/fl_person_data_head"
        android:background="@drawable/selector_selectable_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingTop="@dimen/space_40"
        android:paddingEnd="@dimen/space_40"
        android:paddingBottom="@dimen/space_40">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="700px"
                android:layout_height="120px"
                android:layout_marginTop="60px"
                android:layout_marginRight="20px"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_marginLeft="80px"
                    android:layout_width="140px"
                    android:layout_height="60px"
                    android:text="昵称:"
                    android:textSize="50px" />

                <EditText
                    android:id="@+id/eTnicheng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Name" />
            </LinearLayout>


        <LinearLayout
            android:layout_marginTop="60px"
            android:layout_marginRight="20px"
            android:layout_width="700px"
            android:layout_height="120px"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40px"
                android:layout_weight="1"
                app:srcCompat="@drawable/suo" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="120px"
                android:layout_height="60px"
                android:textSize="50px"
                android:text="Id:" />

            <EditText
                android:id="@+id/eTuserID"
                android:layout_width="500px"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@null"
                android:enabled="false"
                android:inputType="textPersonName"
                android:text="111" />

        </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_person_data_head"
            android:layout_width="@dimen/space_220"
            android:layout_height="@dimen/space_220"
            android:layout_gravity="end|center_vertical"
            android:src="@mipmap/ic_head_placeholder" />

    </FrameLayout>


    <com.hjq.widget.SettingBar
        android:id="@+id/sb_person_data_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="请选择性别"
        app:bar_rightHint="M" />

    <com.hjq.widget.SettingBar
        android:id="@+id/sb_person_data_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="生日"
        app:bar_rightHint="请选择"
        app:bar_rightIcon="@mipmap/ico_go_black"/>

    <com.hjq.widget.SettingBar
        android:id="@+id/sb_person_data_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/personal_data_address"
        app:bar_rightHint="@string/personal_data_address_hint"
        app:bar_rightIcon="@mipmap/ico_go_black" />
    <com.hjq.widget.SettingBar
        android:id="@+id/sb_person_data_zhiye"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        app:bar_leftText="职业"
        app:bar_rightHint="请选择"
        app:bar_rightIcon="@mipmap/ico_go_black"/>

    <com.hjq.widget.SettingBar
        android:id="@+id/sb_person_data_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        app:bar_leftText="@string/personal_data_phone"
        app:bar_rightHint="@string/personal_data_phone_hint"
        app:bar_rightIcon="@mipmap/ico_go_black" >
    </com.hjq.widget.SettingBar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/commit2"
                style="@style/ButtonStyle"
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100px"
                android:layout_marginTop="100px"
                android:text="提交" />

            <Button
                android:id="@+id/share"
                style="@style/ButtonStyle"
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100px"
                android:layout_marginTop="100px"
                android:text="分享" />
        </LinearLayout>


</LinearLayout>